# sempack

./: .coderabbit.yaml  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md
.claude/: project-map.yaml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
crates/sempack-cli/: Cargo.toml
crates/sempack-cli/src/: main.rs
crates/sempack-core/: Cargo.toml
crates/sempack-core/src/: lib.rs
crates/sempack-emitters/: Cargo.toml
crates/sempack-emitters/src/: lib.rs
crates/sempack-extractors/: Cargo.toml
crates/sempack-extractors/src/: lib.rs
crates/sempack-extractors/src/data/: delimited.rs  json.rs  json_helpers.rs  jsonl.rs  mod.rs
crates/sempack-extractors/src/web/: html.rs  mod.rs  svg.rs  xml.rs
crates/sempack-ir/: Cargo.toml
crates/sempack-ir/src/: lib.rs
crates/sempack-reducers/: Cargo.toml
crates/sempack-reducers/src/: lib.rs
crates/sempack-tokenizers/: Cargo.toml
crates/sempack-tokenizers/src/: lib.rs
examples/: sample.md
