[package]
name = "sempack-extractors"
description = "Built-in SemPack extractor plugins (P1: text, markdown, html, xml, svg)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["web"]
web = ["dep:scraper", "dep:quick-xml"]

[dependencies]
sempack-core = { workspace = true }
sempack-ir = { workspace = true }
scraper = { workspace = true, optional = true }
quick-xml = { workspace = true, optional = true }
